--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "cd client/ && npm install && npm run build",
     "develop": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server/server.js",
-    "client": "cd client/ && npm start"
+    "client": "cd client/ && npm start",
+    "setup": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
