--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "develop": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server/server.js",
     "client": "cd client/ && npm start",
-    "setup": "npm install && npm run build"
+    "setup": "npm install && npm run build",
+    "dbsetup": "cd server/ && knex migrate:latest && knex seed:run"
   },
   "repository": {
     "type": "git",
